# helix-mini

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HELIX.md  HELIX_MINI_PLAN.md  README.md  REFACTOR.md  pyproject.toml
docs/: agent-driven-pipeline.md  agents.md  architecture-conceptual.html  architecture-technical.html  architecture.md  atlas.html  atlas.md  forge.html  forge.md  gates.html  getting-started.md  index.html  mcp.html  mcp.md  pipeline.md  quickstart.html  snapshots.html  snapshots.md  usage.html  usage.md
docs/assets/: mermaid-init.js  style.css
docs/guides/: README.md  claude-agent.md  claude-cli-engine.md  docker-sandbox.md  lightspeed-single-folder.md  local-and-hybrid.md  multi-folder-parallel.md  snapshots.md  working-with-atlas.md
docs/reference/: README.md  agent_sdk.md  app.md  atlas.md  cli.md  config.md  docker.md  llm.md  llm_cli.md  pipeline.md  sandbox.md
docs/specs/: 0001-helix-implementation-plan.html  0001-helix-improvements.html
src/helix/: __init__.py  agent_iface.py  app.py  atlas_init.py  cli.py  config.py  envelope.py  intents.py  io.py  llm.py  llm_cli.py  runs.py  sandbox.py  sessions.py
src/helix/builtin_agents/: builder.md  critic_methods.md  critic_results.md  planner.md  scout.md  scout_critic.md  validator.md
src/helix/core/: __init__.py  (+21 more)
src/helix_mini/: __init__.py  agent_sdk.py  app.py  cli.py  docker.py  llm.py  llm_cli.py  sandbox.py
src/helix_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_iface.py  test_agent_sdk.py  test_atlas.py  test_atlas_index.py  test_atlas_protocol.py  test_atlas_schema.py  test_autonomy.py  test_cli.py  test_conformance.py  test_constitution.py  test_cost_pause.py  test_decision_card.py  test_embed.py  test_hitl.py  test_hot.py  test_hx_ask.py  test_hypothesis.py  test_inbox.py  test_ingest.py  test_intents.py  test_iterate_loop.py  test_lightspeed.py  test_lint.py  test_llm_cli.py  test_mcp.py  test_oauth_auth.py  test_path_safety.py  test_pipeline.py  test_plan.py  test_recall.py  test_reports.py  test_runs.py  test_sandbox.py  test_scout_critic.py  test_security_artifacts.py  test_setup.py  test_skills.py  test_snap_ops.py  test_snapshots.py  (+4 more)
(+21 files in other folders)
