[project]
name = "helix"
version = "0.3.0"
description = "A self-auditing research pipeline with a persistent wiki and git-style snapshots"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "mcp>=1.2",
    "anyio>=4.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
embed = ["fastembed>=0.3"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.scripts]
helix = "helix.cli:cli"
helix-mcp = "helix.mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
helix = ["builtin_agents/*.md"]
